--- a/app/views/webmail/compose.rhtml
+++ b/app/views/webmail/compose.rhtml
@@ -1,5 +1,5 @@
 <h1><%=_('Mailbox')%></h1>
-<form name="composeMail" id='composeMail' action="/webmail/webmail/compose"  enctype="multipart/form-data" method="post">
+<form name="composeMail" id='composeMail' action="/webmail/compose"  enctype="multipart/form-data" method="post">
 <div id="header">
   <ul id="primary">
     <li><%=link_folders%></li>
