--- a/app/views/webmail/prefs.rhtml
+++ b/app/views/webmail/prefs.rhtml
@@ -11,7 +11,7 @@
 <div id="tab_main">
   <div id="tab_content">
     <div id="prefs">
-      <form action="/webmail/webmail/prefs" method="post">
+      <form action="/webmail/prefs" method="post">
         <%= hidden_field "mailpref", "id" %>
         <%= hidden_field "mailpref", "customer_id" %>
         <table class="edit">
