--- a/app/views/webmail/filters.rhtml
+++ b/app/views/webmail/filters.rhtml
@@ -30,10 +30,10 @@
   </table>
 <% end %> 
   </form>
-  <% if @flash['error'] %>
-  <div id="SystemError"><%= @flash['error'] %></div>
-  <% elsif @flash['status'] %>
-  <div id="SystemStatus"><%= @flash['status'] %></div>
+  <% if flash['error'] %>
+  <div id="SystemError"><%= flash['error'] %></div>
+  <% elsif flash['status'] %>
+  <div id="SystemStatus"><%= flash['status'] %></div>
   <% end %>
 </div>  
 </div></div>
