--- a/app/views/webmail/filters.rhtml
+++ b/app/views/webmail/filters.rhtml
@@ -1,3 +1,6 @@
+<% content_for('sidebar') { %>
+  <%= render :partial => 'shared/folders' %>
+<% } %>
 <h1><%=_('Mailbox')%></h1>
 <div id="header">
   <ul id="primary">
