message view bugfix

--- a/app/views/webmail/folders.rhtml
+++ b/app/views/webmail/folders.rhtml
@@ -16,17 +16,11 @@
 <div id="tab_content">
 
 <% content_for('sidebar') { %>  
-<div id="folders">
-  <h4><%=_('Folders')%><br/><%=link_manage_folders%></h4>
-  <hr/>
-  <ul> <% for folder in @folders %>
-    <li><%=folder_link(folder)%></li> <% end %> 
-  </ul>
-</div>
+  <%= render :partial => 'shared' %>
 <% } %>
 <div id="messages">
-<% if not(@request['msg_id'] == '') %>
-<%= render_component(:controller => "webmail/webmail", :action => "message", :params => { 'msg_id' => @request['msg_id']})%>
+<% if not(request['msg_id'] == '') %>
+<%= render_component(:controller => "webmail/webmail", :action => "message", :params => { 'msg_id' => request['msg_id']})%>
 <% else %>
 <%= render_component(:controller => "webmail/webmail", :action => "messages") %>
 <% end %>
