--- a/app/views/webmail/filter.rhtml
+++ b/app/views/webmail/filter.rhtml
@@ -4,7 +4,7 @@
     <li><%=link_folders%></li>
     <li><%=link_send_mail%></li>
     <li><%=link_mail_prefs%></li>
-    <li><span><%= _('Filters') %></span></li>
+    <li><span><%= t :filters %></span></li>
     <li><%=link_main%></li>
   </ul>
 </div>
