--- a/app/views/webmail/filters.rhtml
+++ b/app/views/webmail/filters.rhtml
@@ -7,7 +7,7 @@
     <li><%=link_folders%></li>
     <li><%=link_send_mail%></li>
     <li><%=link_mail_prefs%></li>
-    <li><span><%= _('Filters') %></span>
+    <li><span><%= t :filters %></span>
       <ul id="secondary">
         <li><%=link_filter_add%></li>
       </ul> 
