--- a/app/views/layouts/chooser.rhtml
+++ b/app/views/layouts/chooser.rhtml
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<%= @htmllang %>" lang="<%= @htmllang %>">
 <head>
 <title><%=@title%></title>
-<meta http-equiv="content-type" content="text/html; charset=<%= @charset %>" />
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <script type="text/javascript" src="/javascripts/global.js"></script>
 <link rel="stylesheet" href="/stylesheets/admin.css" type="text/css" media="screen" />
 <link rel="stylesheet" href="/stylesheets/tabs.css" type="text/css" media="screen" />
