--- a/app/views/layouts/public.rhtml
+++ b/app/views/layouts/public.rhtml
@@ -2,8 +2,8 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="<%= @htmllang %>" lang="<%= @htmllang %>">
 <head>
-  <title><%=_('Mailr')%></title>
-  <meta http-equiv="content-type" content="text/html; charset=<%= @charset %>" />
+  <title><%= t :mailr %></title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <link rel="stylesheet" href="/stylesheets/admin.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="/stylesheets/tabs.css" type="text/css" media="screen" />
   <link rel="stylesheet" href="/stylesheets/mailr.css" type="text/css" media="screen" />
